WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151847
Modern IDB: storage/indexeddb/cursor-index-delete.html fails
https://bugs.webkit.org/show_bug.cgi?id=151847
Summary
Modern IDB: storage/indexeddb/cursor-index-delete.html fails
Brady Eidson
Reported
2015-12-03 20:45:29 PST
Modern IDB: storage/indexeddb/cursor-index-delete.html fails New cursors that don't start out with a valid position incorrectly report that they do have a position
Attachments
Patch v1
(3.56 KB, patch)
2015-12-03 21:02 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-12-03 21:02:35 PST
Created
attachment 266594
[details]
Patch v1
WebKit Commit Bot
Comment 2
2015-12-03 21:55:54 PST
Comment on
attachment 266594
[details]
Patch v1 Clearing flags on attachment: 266594 Committed
r193410
: <
http://trac.webkit.org/changeset/193410
>
WebKit Commit Bot
Comment 3
2015-12-03 21:55:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug