Modern IDB: storage/indexeddb/cursor-index-delete.html fails. https://bugs.webkit.org/show_bug.cgi?id=151847

Reviewed by Andy Estes.

Source/WebCore:

No new tests (At least one failing test now passes).

* Modules/indexeddb/server/MemoryIndexCursor.cpp:
(WebCore::IDBServer::MemoryIndexCursor::MemoryIndexCursor):
(WebCore::IDBServer::MemoryIndexCursor::currentData):

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/169994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193410 268f45cc-cd09-0410-ab3c-d52691b4dbfc